bug fixes and full size iframe on small screen

--- a/chatbot-build/style-dev.css
+++ b/chatbot-build/style-dev.css
@@ -131,7 +131,7 @@
   width: 100%;
   height: 100%;
   border: 0px !important;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); */
 }
 
 .chatbot-icon-interfaceEmbed {
